# hackbcn-project

./: README.md  requirements.txt
hackbcn-backend/: .env  Procfile  README.md  gunicorn_config.py  pyproject.toml  requirements.txt  setup.py  setup.sh
hackbcn-backend/instance/: places.db
hackbcn-backend/levelaccess/: __main__.py  api.py  app.py  prompt.md
hackbcn-backhand/: get_address.py  get_picture.py  requirements.txt  setup.py
hackbcn-frontend/: package-lock.json  package.json
hackbcn-frontend/src/: App.css  App.jsx  apiService.js
hackbcn-frontend/src/components/: Navbar.jsx  Navbar.scss  SearchBar.jsx  Searchbar.css
hackbcn-frontend/src/modules/: Company.jsx  Company.scss  Homepage.jsx  Homepage.scss  Place.jsx  Place.scss
hackbcn-frontend/src/pages/Homepage/: Homepage.jsx  Homepage.scss
